--- a/package.json
+++ b/package.json
@@ -13,23 +13,24 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@react-google-maps/api": "^2.20.6",
+    "@sendgrid/mail": "^7.7.0",
     "axios": "^1.7.9",
     "contentful": "^10.6.22",
     "next": "14.1.0",
     "next-auth": "^4.24.11",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@sendgrid/mail": "^7.7.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
 }
