--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "14.1.0",
     "next-auth": "^4.24.11",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sharp": "^0.34.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
