--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@sendgrid/mail": "^7.7.0",
     "axios": "^1.7.9",
     "contentful": "^10.6.22",
+    "dotenv": "^17.2.0",
     "next": "14.1.0",
     "next-auth": "^4.24.11",
     "react": "^18.2.0",
