--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@heroicons/react": "^2.2.0",
     "@react-google-maps/api": "^2.20.6",
     "@sendgrid/mail": "^7.7.0",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "axios": "^1.7.9",
     "contentful": "^10.6.22",
     "dotenv": "^17.2.0",
